--- a/Presentations/ProgressIQ.IdentityServer/App_LocalResources/Atoz/AZ.resx
+++ b/Presentations/ProgressIQ.IdentityServer/App_LocalResources/Atoz/AZ.resx
@@ -123,6 +123,9 @@
   <data name="SignIn" xml:space="preserve">
     <value>Sign In</value>
   </data>
+  <data name="SignInError" xml:space="preserve">
+    <value>Incorrect credential or not authorize</value>
+  </data>
   <data name="SignInWasUnsuccessful" xml:space="preserve">
     <value>Sign In was unsuccessful. Please correct the errors and try again.</value>
   </data>
